<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:visible="false"
            android:id="@+id/login"
            android:icon="@drawable/ic_home"
            android:title="Login/SignUp" />
        <item
            android:id="@+id/sign"
            android:icon="@drawable/ic_home"
            android:title="Login/SignUp" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_nav_policy"
            android:title="@string/nav_terms" />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_logout" />


        <item
            android:id="@+id/nav_powerd"
            android:icon="@drawable/copy"
            android:visible="false"
            android:title="@string/status_stop" />

        <item
            android:id="@+id/nav_reward"
            android:icon="@drawable/gift"
            android:title="Rewards" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="Cart" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/order"
            android:title="@string/nav_order" />

    </group>
</menu>
